--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
   </head>
 
   <body>
-
+    <!-- navigation bar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Double Vision</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            
+          <form class="navbar-form navbar-right">          
+            <ul class="nav navbar-nav navul">
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Sed ut</a></li>
+              <li><a href="#">Ut enim ad </a></li>
+              <li><a href="#">Duis aute</a></li>
+              <li><a href="#">Excepteur</a></li>        
+            </ul>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -47,8 +49,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1><img src="img/logo.png" alt="logo" width="150">Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn jbtn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p><a class="btn jbtn btn-lg" href="#" role="button">Talk to Us &nbsp; &raquo;</a></p>
       </div>
     </div>
 
@@ -57,7 +59,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="subctner">
-            <a><h2>Heading</h2>
+            <a><h2>Lorem ipsum dolor sit amet</h2>
             <img src="http://placehold.it/350x200" alt="thumbnail image"></a>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default vdbtn" href="#" role="button">View details &raquo;</a></p>
@@ -65,7 +67,7 @@
         </div>
         <div class="col-md-4">
           <div class="subctner">
-            <a><h2>Heading</h2>
+            <a><h2>Lorem ipsum dolor sit amet</h2>
             <img src="http://placehold.it/350x200" alt="thumbnail image"></a>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default vdbtn" href="#" role="button">View details &raquo;</a></p>
@@ -73,7 +75,7 @@
        </div>
         <div class="col-md-4">
           <div class="subctner">
-            <a><h2>Heading</h2>
+            <a><h2>Lorem ipsum dolor sit amet</h2>
             <img src="http://placehold.it/350x200" alt="thumbnail image"></a>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
             <p><a class="btn btn-default vdbtn" href="#" role="button">View details &raquo;</a></p>
@@ -82,18 +84,59 @@
       </div>
 
       <hr>
+      <!-- carousel items -->
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+          </div>
+          <div class="item">
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+          </div>
+          <div class="item">
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+            <a class="crsimg" href="#"><img src="http://placehold.it/200x200" class="img-thumbnail" alt="thumbnail image"></a>
+          </div>
+        </div>
+
+      </div>
+
+      <hr>
+      <!-- footer info -->
       <footer>
         <p>&copy; 2016 Double Vision Film Studio</p>
       </footer>
     </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script>
+      $('.carousel').carousel({
+        interval: 4000
+      })
+    </script>
   </body>
 </html>
